fix overlap with pdf viewer (fix jsxc/jsxc#761)

--- a/scss/_oc.scss
+++ b/scss/_oc.scss
@@ -236,7 +236,7 @@
 }
 
 @media (min-width: 768px) {
-    #content, #content-wrapper, #filestable > thead {
+    #content, #content-wrapper, #filestable > thead, #pdframe {
         padding-right: 0;
         transition: padding-right 0.5s;
     }
@@ -255,7 +255,7 @@
     }
 
     .jsxc-roster-shown {
-        #content, #content-wrapper, #filestable > thead {
+        #content, #content-wrapper, #filestable > thead, #pdframe {
             padding-right: 210px;
         }
 
